--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ li{
   <li><a href="#about">About</a></li>
 </ul>
 <h1 style="background-color:yellow;">Fruits</h1>
-<img src="D:/web page/images/fruits.jpg" alt="apple" width="200" height="100">
+<img src="images/fruits.jpg" alt="apple" width="200" height="100">
 <h1 style="background-color:Red;">Apple</h1>
-<img src="D:/web page/images/apple.jpg" alt="apple" width="100" height="100">
+<img src="D:images/apple.jpg" alt="apple" width="100" height="100">
 <p>Apple is good for health</p>
 <h1 style="background-color:green;">Banana</h1>
-<img src="D:/web page/images/banana.jpg" alt="banana" width="150" height="150">
+<img src="D:images/banana.jpg" alt="banana" width="150" height="150">
 <p>Banana is good for health</p>
 </body>
 </html>
