--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ li{
 <img src="apple.jpg" alt="apple" width="100" height="100">
 <p>Apple is good for health</p>
 <h1 style="background-color:green;">Banana</h1>
-<img src="images/banana.jpg" alt="banana" width="150" height="150">
+<img src="banana.jpg" alt="banana" width="150" height="150">
 <p>Banana is good for health</p>
 </body>
 </html>
